objects/QuoteLineItem/fields/Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price__c</fullName>
    <formula>Product2.Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>