objects/QuoteLineItem/fields/Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Description__c</fullName>
    <label>Line Item Description SAM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>