objects/QuoteLineItem/fields/Product_Cost_Price__c.field-meta.xml
<CustomField>
    <fullName>Product_Cost_Price__c</fullName>
    <label>Product Cost Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>