objects/QuoteLineItem/fields/Product_URLS__c.field-meta.xml
<CustomField>
    <fullName>Product_URLS__c</fullName>
    <formula>Product2.Product_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product URL</label>
    <type>Text</type>
</CustomField>