objects/QuoteLineItem/fields/Sales_Description__c.field-meta.xml
<CustomField>
    <fullName>Sales_Description__c</fullName>
    <label>Sales Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>